--- a/DLNN_v3_2.6.ipynb
+++ b/DLNN_v3_2.6.ipynb
@@ -1559,7 +1559,7 @@
       "source": [
         "#%load_ext tensorboard\n",
         "%reload_ext tensorboard\n",
-        "%tensorboard --logdir='logsSimpleRNN' #callback to tensorboard. "
+        "%tensorboard --logdir='logsSimpleRNN_v3' #callback to tensorboard. "
       ]
     },
     {
@@ -2330,84 +2330,14 @@
       ]
     },
     {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# MSTL"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting statsforecast\n",
-            "  Using cached statsforecast-1.4.0-py3-none-any.whl (91 kB)\n",
-            "Requirement already satisfied: tqdm in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (4.64.1)\n",
-            "Requirement already satisfied: plotly in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (5.9.0)\n",
-            "Requirement already satisfied: scipy>=1.7.3 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (1.9.1)\n",
-            "Requirement already satisfied: numba>=0.55.0 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (0.55.1)\n",
-            "Requirement already satisfied: pandas>=1.3.5 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (1.4.4)\n",
-            "Requirement already satisfied: numpy>=1.21.6 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (1.21.6)\n",
-            "Requirement already satisfied: statsmodels>=0.13.2 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (0.13.2)\n",
-            "Requirement already satisfied: matplotlib in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsforecast) (3.5.2)\n",
-            "Requirement already satisfied: llvmlite<0.39,>=0.38.0rc1 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from numba>=0.55.0->statsforecast) (0.38.0)\n",
-            "Requirement already satisfied: setuptools in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from numba>=0.55.0->statsforecast) (63.4.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from pandas>=1.3.5->statsforecast) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from pandas>=1.3.5->statsforecast) (2022.1)\n",
-            "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsmodels>=0.13.2->statsforecast) (0.5.2)\n",
-            "Requirement already satisfied: packaging>=21.3 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from statsmodels>=0.13.2->statsforecast) (21.3)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from matplotlib->statsforecast) (9.2.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from matplotlib->statsforecast) (1.4.2)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from matplotlib->statsforecast) (4.25.0)\n",
-            "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from matplotlib->statsforecast) (3.0.9)\n",
-            "Requirement already satisfied: cycler>=0.10 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from matplotlib->statsforecast) (0.11.0)\n",
-            "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from plotly->statsforecast) (8.0.1)\n",
-            "Requirement already satisfied: colorama in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from tqdm->statsforecast) (0.4.5)\n",
-            "Requirement already satisfied: six in c:\\users\\e703601\\anaconda3\\lib\\site-packages (from patsy>=0.5.2->statsmodels>=0.13.2->statsforecast) (1.16.0)\n",
-            "Installing collected packages: statsforecast\n",
-            "Successfully installed statsforecast-1.4.0\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install statsforecast --user"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\e703601\\AppData\\Roaming\\Python\\Python39\\site-packages\\statsforecast\\core.py:21: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-            "  from tqdm.autonotebook import tqdm\n"
-          ]
-        }
-      ],
-      "source": [
-        "from statsforecast.models import MSTL\n",
-        "from statsforecast.models import AutoARIMA"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {},
       "outputs": [],
       "source": [
-        "mstl_model = MSTL(season_length=[24, 8760], trend_forecaster=AutoARIMA())\n",
-        "mstl_model = mstl_model.fit(y=y_train)\n",
-        "y_hat_dict = mstl_model.predict(h=8760, level=[90])\n",
-        "y_hat_dict"
+        "#%load_ext tensorboard\n",
+        "%reload_ext tensorboard\n",
+        "%tensorboard --logdir='BiLSTM_v2' #callback to tensorboard."
       ]
     }
   ],
@@ -2430,7 +2360,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
     },
     "orig_nbformat": 4,
     "vscode": {
